force-app/main/default/objects/Alumni_Activities__c/Alumni_Activities__c.object-meta.xml
<CustomObject>
    <label>Alumni Activities</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Activity Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Alumni Activities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>