force-app/main/default/objects/Alumni_Activities__c/fields/Achievement__c.field-meta.xml
<CustomField>
    <fullName>Achievement__c</fullName>
    <label>Achievement</label>
    <length>225</length>
    <type>Text</type>
</CustomField>