force-app/main/default/objects/Alumni_Activities__c/fields/Achiever__c.field-meta.xml
<CustomField>
    <fullName>Achiever__c</fullName>
    <formula>Contact__r.FirstName + &apos; &apos; +  Contact__r.MiddleName + &apos; &apos; +  Contact__r.LastName</formula>
    <label>Achiever</label>
    <type>Text</type>
</CustomField>