force-app/main/default/objects/Alumni_Activities__c/fields/Approved_by_Admin__c.field-meta.xml
<CustomField>
    <fullName>Approved_by_Admin__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Approved by Admin</label>
    <type>Checkbox</type>
</CustomField>