force-app/main/default/objects/Alumni_Activities__c/fields/Blog_Name__c.field-meta.xml
<CustomField>
    <fullName>Blog_Name__c</fullName>
    <label>Blog Name</label>
    <length>225</length>
    <type>Text</type>
</CustomField>