force-app/main/default/objects/Alumni_Activities__c/fields/Current_CTC_In_Lakhs__c.field-meta.xml
<CustomField>
    <fullName>Current_CTC_In_Lakhs__c</fullName>
    <label>Current CTC (In Lakhs)</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>