force-app/main/default/objects/Alumni_Activities__c/fields/Expected_Salary_in_Lahks__c.field-meta.xml
<CustomField>
    <fullName>Expected_Salary_in_Lahks__c</fullName>
    <label>Expected Salary (in Lahks)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>