force-app/main/default/objects/Alumni_Activities__c/fields/Experience_Required__c.field-meta.xml
<CustomField>
    <fullName>Experience_Required__c</fullName>
    <inlineHelpText>In Years</inlineHelpText>
    <label>Experience Required</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>