force-app/main/default/objects/Alumni_Activities__c/fields/Funds_Raised_So_Far__c.field-meta.xml
<CustomField>
    <fullName>Funds_Raised_So_Far__c</fullName>
    <label>Funds Raised So Far</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>