force-app/main/default/objects/Alumni_Activities__c/fields/No_of_Positions__c.field-meta.xml
<CustomField>
    <fullName>No_of_Positions__c</fullName>
    <label>No of Positions</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>