force-app/main/default/objects/Alumni_Activities__c/fields/Posted_On__c.field-meta.xml
<CustomField>
    <fullName>Posted_On__c</fullName>
    <label>Posted On</label>
    <type>Date</type>
</CustomField>