force-app/main/default/objects/Alumni_Activities__c/fields/Preferred_Location__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Location__c</fullName>
    <label>Preferred Location</label>
    <length>225</length>
    <type>Text</type>
</CustomField>