force-app/main/default/objects/Alumni_Activities__c/fields/Salary_in_Lahks__c.field-meta.xml
<CustomField>
    <fullName>Salary_in_Lahks__c</fullName>
    <label>Salary (in Lahks)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>