force-app/main/default/objects/Alumni_Activities__c/fields/Target_Fund_Raising_Amount__c.field-meta.xml
<CustomField>
    <fullName>Target_Fund_Raising_Amount__c</fullName>
    <label>Target Fund Raising Amount`</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>