force-app/main/default/objects/Alumni_Activities__c/fields/Title_Designation__c.field-meta.xml
<CustomField>
    <fullName>Title_Designation__c</fullName>
    <label>Title/Designation</label>
    <length>225</length>
    <type>Text</type>
</CustomField>