force-app/main/default/objects/Alumni_Activities__c/fields/Total_Experience_In_Years__c.field-meta.xml
<CustomField>
    <fullName>Total_Experience_In_Years__c</fullName>
    <label>Total Experience(In Years)</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>