force-app/main/default/objects/Alumni_Activities__c/fields/Work_Location__c.field-meta.xml
<CustomField>
    <fullName>Work_Location__c</fullName>
    <label>Work Location</label>
    <length>225</length>
    <type>Text</type>
</CustomField>