force-app/main/default/objects/Alumni_Activities__c/recordTypes/Achievements.recordType-meta.xml
<RecordType>
    <fullName>Achievements</fullName>
    <active>true</active>
    <label>Achievements</label>
</RecordType>