force-app/main/default/objects/Alumni_Activities__c/recordTypes/Blogs.recordType-meta.xml
<RecordType>
    <fullName>Blogs</fullName>
    <active>true</active>
    <label>Blogs</label>
</RecordType>