force-app/main/default/objects/Alumni_Activities__c/recordTypes/Events.recordType-meta.xml
<RecordType>
    <fullName>Events</fullName>
    <active>true</active>
    <label>Events</label>
</RecordType>