force-app/main/default/objects/Alumni_Activities__c/recordTypes/Fund_Raising_Request.recordType-meta.xml
<RecordType>
    <fullName>Fund_Raising_Request</fullName>
    <active>true</active>
    <label>Fund Raising Request</label>
</RecordType>