force-app/main/default/objects/Alumni_Activities__c/recordTypes/Job_Posting.recordType-meta.xml
<RecordType>
    <fullName>Job_Posting</fullName>
    <active>true</active>
    <label>Job Posting</label>
</RecordType>