force-app/main/default/objects/Alumni_Activities__c/recordTypes/Job_Seeking.recordType-meta.xml
<RecordType>
    <fullName>Job_Seeking</fullName>
    <active>true</active>
    <label>Job Seeking</label>
</RecordType>