force-app/main/default/objects/Alumni_Activities__c/listViews/Blogs.listView-meta.xml
<ListView>
    <fullName>Blogs</fullName>
    <columns>NAME</columns>
    <columns>Contact_Name__c</columns>
    <columns>Blog_Name__c</columns>
    <columns>Blog_Link__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Alumni_Activities__c.Blogs</value>
    </filters>
    <label>Blogs</label>
</ListView>