force-app/main/default/objects/Alumni_Activities__c/listViews/Events.listView-meta.xml
<ListView>
    <fullName>Events</fullName>
    <columns>NAME</columns>
    <columns>Event_Name__c</columns>
    <columns>Date__c</columns>
    <columns>Venue__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Alumni_Activities__c.Events</value>
    </filters>
    <label>Events</label>
</ListView>