force-app/main/default/objects/Alumni_Activities__c/listViews/Fund_Raising_Request.listView-meta.xml
<ListView>
    <fullName>Fund_Raising_Request</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Alumni_Activities__c.Fund_Raising_Request</value>
    </filters>
    <label>Fund Raising Request</label>
</ListView>