force-app/main/default/objects/Alumni_Activities__c/listViews/Job_Postings.listView-meta.xml
<ListView>
    <fullName>Job_Postings</fullName>
    <columns>NAME</columns>
    <columns>Company_Name__c</columns>
    <columns>Designation__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Alumni_Activities__c.Job_Posting</value>
    </filters>
    <label>Job Postings</label>
</ListView>