force-app/main/default/objects/Alumni_Activities__c/listViews/Job_Seeking.listView-meta.xml
<ListView>
    <fullName>Job_Seeking</fullName>
    <columns>NAME</columns>
    <columns>Contact_Name__c</columns>
    <columns>Total_Experience_In_Years__c</columns>
    <columns>Current_CTC_In_Lakhs__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Alumni_Activities__c.Job_Seeking</value>
    </filters>
    <label>Job Seeking</label>
</ListView>